--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,5 @@
 
-
+#fire-background{background: linear-gradient(89.2deg, rgb(0, 0, 0) 10.4%, rgb(255, 0, 0) 37.1%, rgb(255, 216, 51) 64.3%, rgb(255, 255, 255) 90.5%);}
 
 #main-background {
   background: radial-gradient(circle at 10% 20%, rgb(90, 92, 106) 0%, rgb(32, 45, 58) 81.3%);
@@ -90,3 +90,4 @@ button:active .button_top {
 
 .card-opacity { background-color: rgba(255, 165, 0, 0.25);}
 .card *  {opacity:1;}
+
