--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -6,51 +6,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Community Center {% endblock title %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'styles/style.css' %}"> 
-        <link rel="stylesheet" href="{% static 'styles/about.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/about.css' %}">
 </head>
 
-<body >
-    <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}"> Community Center </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}"> Home <span class"sr-only"> (current)</span></a>
-                </li>
-                <li class="nav-item">
-                <a  class="nav-link" href="{% url 'about' %}" >About </a>
-                </li>
-                <li class="nav-item">
-                    <a  class="nav-link" href="{% url 'gallery' %}" > Gallery </a>
-                    </li>
-                    <li class="nav-item">
-                <a  class="nav-link" href="{% url 'booking' %}"> Booking </a>
-                </li>
-            </ul>
+<body>
+    <header class="carousel-inner">
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-light ">
+                <a class="navbar-brand" href="{% url 'home' %}"> Community Center </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'home' %}"> Home <span class"sr-only"> (current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'about' %}">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'gallery' %}"> Gallery </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'booking' %}"> Booking </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
-      
-    </header>
-    <main>
-    {% block content %}
-    
 
-    
+    </header>
+
+    {% block content %}
+
+
+
     <!-- Place for page content -->
     {% endblock content %}
 
-</main>
+
     <!-- Footer Section -->
-    <footer class="footer bg-light mt-4 py-3">
-        <div class="container">
+    <footer class="footer   py-3 carousel-inner">
+        <div class="container" class="carousel-inner">
             <!-- Flex container for aligning footer content -->
-            <div class="row">
+            <div class="row ">
                 <!-- Copyright Notice: Visible only on md screens and above -->
                 <div class=" d-none d-md-flex  col-6    text-center  mb-3 ">
                     <span class="text-muted"> &copy; 2023 Jesse Ross</span>
@@ -88,7 +92,7 @@
                 <!-- spacing small screen div -->
                 <div class="col-3 d-md-none"></div>
                 <div class="d-flex  justify-content-between align-items-center col-6 d-md-none">
-                    
+
                     <a href="https://twitter.com" target="_blank" class="text-muted m-2">
                         <i class="fab fa-twitter"></i>
                     </a>
@@ -115,9 +119,11 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="https://kit.fontawesome.com/11665d5c0d.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
