--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -51,7 +51,7 @@
 
 
     <!-- Footer Section -->
-    <footer class="footer   py-3 carousel-inner">
+    <footer class="footer  mt-4 py-3 carousel-inner">
         <div class="container" class="carousel-inner">
             <!-- Flex container for aligning footer content -->
             <div class="row ">
