--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -121,3 +121,16 @@ button:not(:has(.button_top)):active {
 .carousel-control-prev:hover .carousel-control-prev-icon,
 .carousel-control-next:hover .carousel-control-next-icon {
   opacity: 0.4;}
+
+
+
+
+
+/* ABOUT PAGE */ 
+li {text-decoration: none;
+  list-style-type: none;}
+  
+  ul {text-decoration: none;
+      list-style-type: none;}
+  
+  
