Add about page style

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -133,4 +133,5 @@ li {text-decoration: none;
   ul {text-decoration: none;
       list-style-type: none;}
   
+img-facility {object-fit: cover;}
   
