--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -2,88 +2,98 @@
 {% load static %}
 {% block title %} About - {{block.super}}{% endblock title %}
 
-{% block content %}
-<div class="container mt-4">
+{% block content %}<main id="main-background">
+  <div class="container mt-4 ">
     <div class="row">
-        <div class="col-12">
-            <h1 class="display-4"> About our community Center </h1>
-            <p class="lead"> We are focused on enriching lives , by providing a space for learning, creativity and community engagement </p>
-        </div>
+      <div class="col-12 carousel-inner mt-3 pt-3 border-none rounded">
+        <h1 class="display-4"> About our community Center </h1>
+        <p class="lead"> We are focused on enriching lives , by providing a space for learning, creativity and community
+          engagement </p>
+      </div>
     </div>
-</div>
+  </div>
 
-<div class="row mt-5 d-flex justify-content-center align-items-center">
-    <div class="col-md-6">
-        <div class="card d-flex justify-content-center align-items-center carousel-inner ">
-            <div class="card-body carousel-inner">
-              <div class="bg-light border-0 rounded-1 p-2 mb-3">
-                <h5 class="card-title" > Our Impact </h5>
-                <p class="card-text"> We've been making a difference in the community since  7/12/2024 </p>
-              </div>
-                <div class="bg-light border-0 rounded-1">
-                <ul class="list-unstyled p-3">
-                    <li class=""> Total Members : <strong> {{ total_users }} </strong> </li>
-                    <li class=""> Total Bookings : <strong> {{ total_bookings }} </strong></li>
-                    <li class=""> Proud provider of official Welsh Language Classes </li>
+  <div class="row mt-5 d-flex justify-content-center align-items-center">
+    <div class="col-10 col-md-5 d-flex">
+      <div class="card d-flex justify-content-center align-items-center carousel-inner ">
+        <div class="card-body carousel-inner">
+          <div class="bg-light border-0 rounded-1 p-2 mb-3">
+            <h5 class="card-title"> Our Impact </h5>
+            <p class="card-text"> We've been making a difference in the community since 7/12/2024 </p>
+          </div>
+          <div class="bg-light border-0 rounded-1">
+            <ul class="list-unstyled p-3">
+              <li class=""> Total Members : <strong> {{ total_users }} </strong> </li>
+              <li class=""> Total Bookings : <strong> {{ total_bookings }} </strong></li>
+              <li class=""> Proud provider of official Welsh Language Classes </li>
 
 
-                </ul>
-                </div>
-            </div>
-            <div class="col-10 w-80 justify-content-center">
-              <h3 class="text-center"> Meet the Team </h3>
-              <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel carousel-image">
-                  <ol class="carousel-indicators">
-                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner pb-3">
-                    <div class="carousel-item active">
-                      <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575274/admin-image-person_qlayeg.jpg" class="d-block w-100 carousel-image" alt="...">
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Admin : Sarah Wang </h5>
-                        <p> I am here for any query or concerns you might have.</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575091/cleaner-image_kmjx4i.jpg" class="d-block w-100" alt="...">
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5> Cleaner : Tamie Hamilton </h5>
-                        <p> I keep our community center spotless and welcoming.</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575161/maintenanceguy-image_lm0rsy.jpg" class="d-block w-100 carousel-image " alt="...">
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Maintenance : Mark Hamilton </h5>
-                        <p> They call me bob the builder , no problem I can't fix.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </button>
-                </div>
-          
+            </ul>
           </div>
         </div>
+        <div class="col-10 w-80 justify-content-center">
+          <h3 class="text-center"> Meet the Team </h3>
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel carousel-image">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner pb-3">
+              <div class="carousel-item active">
+                <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575274/admin-image-person_qlayeg.jpg"
+                  class="d-block w-100 carousel-image" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Admin : Sarah Wang </h5>
+                  <p> I am here for any query or concerns you might have.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575091/cleaner-image_kmjx4i.jpg"
+                  class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5> Cleaner : Tamie Hamilton </h5>
+                  <p> I keep our community center spotless and welcoming.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575161/maintenanceguy-image_lm0rsy.jpg"
+                  class="d-block w-100 carousel-image " alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Maintenance : Mark Hamilton </h5>
+                  <p> They call me bob the builder , no problem I can't fix.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
+  
 
-    <div class="col-md-6">
-        <div class="card">
-            <h5 class="card-title"> Our New Facility </h5>
-        <img src="{% static 'assets/images/community-center.jpg' %}" alt="community center image " class="card-img-top community-center-image-card">
-    </div>
-    </div>
-</div>
 
-</div>
+  <div class="d-flex col-6 col-md-5  d-md-block carousel-inner row ">
+    <div class=card>
+    <h5 class="card-title"> Our New Facility </h5>
+    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575044/community-center_id3gc8.jpg"
+      alt="community center image " class="img-fluid">
+    </div>
+  </div>
+  </div>
+ 
+
+  
+</main>
 
 
 {% endblock content %}
