--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -79,20 +79,28 @@
         </div>
       </div>
     </div>
-  
 
 
-  <div class="d-flex col-6 col-md-5  d-md-block carousel-inner row ">
-    <div class=card>
-    <h5 class="card-title"> Our New Facility </h5>
-    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575044/community-center_id3gc8.jpg"
-      alt="community center image " class="img-fluid">
+
+    <div class="d-flex col-6  row p-2 justify-content-center align-items-center">
+      <div class="col-6   carousel-inner w-50 border-0 rounded me-1">
+        <div class="container  justify-content-center  m-2  border-0 rounded bg-light">
+        <h2> Contact Us </h2>
+        <p> Email : community@gmail.com</p>
+        <p> Number : 01249038509 </p>
+      </div>
+      </div>
+      <div class="col-10">
+        <div class="card carousel-inner m-4  p-4">
+          <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575044/community-center_id3gc8.jpg"
+            alt="community center image " class=" img-fluid overflow-hidden">
+          <h5 class="card-title"> Our New Facility </h5>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
- 
 
-  
+  </div>
+
 </main>
 
 
