--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2,8 +2,14 @@
 #fire-background{background: linear-gradient(89.2deg, rgb(0, 0, 0) 10.4%, rgb(255, 0, 0) 37.1%, rgb(255, 216, 51) 64.3%, rgb(255, 255, 255) 90.5%);}
 
 #main-background {
-  background: radial-gradient(circle at 10% 20%, rgb(90, 92, 106) 0%, rgb(32, 45, 58) 81.3%);
+  background: linear-gradient(45deg, #FFB199,#FFD26F,#73A1F9,  #6DC8F3);
+  background-size: 600% 600%;
+  
+  -webkit-animation: Gradient 25s ease infinite;
+  -moz-animation: Gradient 25s ease infinite;
+  animation: Gradient 25s ease infinite;
 }
+
 
 .testing-css { font-size: 100px;}
 button {
