--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -141,3 +141,26 @@ li {text-decoration: none;
   
 img-facility {object-fit: cover;}
   
+
+
+
+/* Styling the forms */
+form {
+  width:90vw;
+  padding: 2rem;
+  background: var(--form-background-gradient);
+  border-radius: 0.75rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+
+}
+
+.custom-form {
+  max-width:80%;
+
+}
+
+:root {
+  --form-background-gradient: linear-gradient(45deg, #FFB199,#FFD26F,#73A1F9,  #6DC8F3);
+  --button-gradient: linear-gradient(45deg, #FF5F6D, #FFC371);
+}
