--- a/templates/community/events/update_event.html
+++ b/templates/community/events/update_event.html
@@ -3,9 +3,11 @@
 {% block title %} Events - {{block.super}}{% endblock title %}
 
 {% block content %}
-<div class="row justify-content-center align-items-center d-flex carousel-inner">
-    <div class="col-11 col-md-9 col-lg-7 mt-5 mb-5 border-0" id="main-background">
-        <h1> Update Event  </h1>
+<div class="row justify-content-center align-items-center p-1 border-0 rounded d-flex carousel-inner">
+    <div class="col-11 col-md-9 col-lg-7 mt-5 p-1 mb-5 border-0 rounded" id="main-background">
+        <div class="bg-light m-1 p-1 border-0 rounded ">
+        <h1 class="text-center"> Update Event  </h1>
+        </div>
         {% load crispy_forms_tags %}
         <form method="post" enctype="multipart/form-data" class="col-12">
             {% csrf_token %}
