--- a/templates/community/join_event.html
+++ b/templates/community/join_event.html
@@ -15,7 +15,7 @@
     7.00
 {% else %}
     0.00
-{% endif %} will be deducted from your wallet . 
+{% endif %} will be deducted from your wallet . No refund is eligible for events. If the event is cancelled a full refund must be issued by the instructor. 
 </p>
 <form method="post">
     {% csrf_token %}
