--- a/templates/community/events/event_detail.html
+++ b/templates/community/events/event_detail.html
@@ -2,7 +2,7 @@
 <h1>{{ event.title }} </h1>
 <p> {{ event.description }} </p>
 <p>Date: {{ event.date }}</p>
-<p>Start Time : {{ event.start_time }}</p>
+<p>Start Time : {{ event.time }}</p>
 <p> Capacity: {{ event.capacity }}</p>
-<p> Cost: {{ event.cost }} </p>
+<p> Cost:  </p>
 <img src="{{ event.image.url }}" alt="Event Iamge">
